# gpustand

./: .gitignore  CMakeLists.txt  README.md  clean.sh  config.h.in  configure.sh  get_reports.sh  run.sh  show_plots.sh
data/: data.json  in_args.json  in_args.txt  outOfC418_02Polar0.json  outOfC418_02Polar1  outOfC418_02Polar1.json
data/AM_201_5x6x7830/45/: Gpu_tfpPreNormalizationPolar0  TimeResults0  tfpMSeqSigns.txt
data/AM_201_5x6x7830/45/1/: hexOutOfC418_02Polar0  hexOutOfC418_02Polar1  outOfC418_02Polar0  tfpPreNormalizationRay0Polar0  tfpPreNormalizationRay0Polar1  tfpPreNormalizationRay1Polar0  tfpPreNormalizationRay1Polar1  tfpPreNormalizationRay2Polar0  tfpPreNormalizationRay2Polar1  tfpPreNormalizationRay3Polar0  tfpPreNormalizationRay3Polar1  tfpPreNormalizationRay4Polar0  tfpPreNormalizationRay4Polar1  ucopo
include/: CLDefs.h  DeviceIdentity.hxx  FftData.hxx  FftParams.hxx  FftReport.hxx  JsonHelper.hxx  TimeResult.hxx  debug_computations.h  error.h  error.hxx  types.h
plotter/: main.py  plotter.py  rw.py  temp.py
reporter/: main.py
src/: CMakeLists.txt  main.cpp  main.cxx  tests.h  tests_parallel.h
src/data_hasher/: CMakeLists.txt  DataHashWrapper.hxx  DefaultHashType.hxx  IHash.hxx  StrobeHash.cxx  StrobeHash.hxx  StrobePoint.hxx
src/data_queue/: AsyncDataQueueInterface.h  AsyncDataQueueInterface.hxx  CMakeLists.txt  DataQueueInterface.h  DataQueueInterface.hxx  JsonDirAsyncDataQueue.cpp  JsonDirAsyncDataQueue.h  JsonDirDataQueue.cpp  JsonDirDataQueue.h  JsonReadDataQueue.h  JsonReadDataQueue.hxx  JsonWriteDataQueue.h  JsonWriteDataQueue.hxx  ReadDataQueueInterface.h  ReadDataQueueInterface.hxx  WriteDataQueueInterface.h  WriteDataQueueInterface.hxx
src/data_queue_new/: AsyncDataQueueInterface.h  DataQueueInterface.h  JsonReadDataQueue.h  JsonWriteDataQueue.h  ReadDataQueueInterface.h  WriteDataQueueInterface.h
src/execution_pool/: CMakeLists.txt  ExecutionPool.cpp  ExecutionPool.cxx  ExecutionPool.h  ExecutionPool.hxx
src/fft/: AmFft.cpp  AmFft.cxx  CMakeLists.txt  FmFft.cpp  FmFft.cxx  FmFftSepNl.cpp  FmFftSepNl.cxx  GpuFourier.cpp  GpuFourier.cxx  GpuFourier.h  GpuFourier.hxx  GpuKernels.cl
src/gpu/: CMakeLists.txt  GpuInit.cpp  GpuInit.cxx  GpuInit.h  GpuInit.hxx  ProgramHandler.cpp  ProgramHandler.cxx  ProgramHandler.h  ProgramHandler.hxx
src/helper/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.cxx  HelperFunctions.h  HelperFunctions.hxx
src/io_json/: CMakeLists.txt  IoJson.cpp  IoJson.cxx  IoJson.h  IoJson.hxx  JsonHelper.h  JsonHelper.hxx  ReadWriteFunctions.cpp  ReadWriteFunctions.h
src/tests/: CMakeLists.txt  tests.cpp  tests.cxx  tests.h  tests.hxx  tests_parallel.cpp  tests_parallel.h
